
* Fixed a bug in MSSQLConnection caused by column names being unicode.

* Fixed a bug in FirebirdConnection caused by column names having trailing
  spaces.

* Order by several columns with inheritance.

* Fixed aggregators and accumulators with inheritance.

SQLObject 0.7.10
================

* With PySQLite2 do not use encode()/decode() from PySQLite1 - always use
  base64 for BLOBs.

SQLObject 0.7.9
===============

Released 30 Oct 2007.

Bug Fixes
---------

* Remove 'limit' from SelectResults after setting start/end so .clone()
  never sees limit again.

* Fixed a bug in sqlbuilder._LikeQuoted() - call sqlrepr() on the
  expression to escape single quotes if the expression is a string.

* Fixed StringCol and UnicodeCol: use sqlType with MSSQL.

* Fixed startswith/endswith/contains for UnicodeCol.

Other Changes
-------------

* Changed the default value for 'varchar' in BLOBColumns from 'auto' to False
  (so that the default type for the columns in MySQL is BLOB, not TEXT).

* Changed the implementation type in BoolCol under MySQL from TINYINT to
  BOOL (which is a synonym for TINYINT(1)).

SQLObject 0.7.8
===============

Released 25 July 2007.

Bug Fixes
---------

* Replaced calls to style.dbColumnToPythonAttr() in joins.py by name/dbName
  lookup in case the user named columns differently using dbName.

* Minor correction in the tests: we fully support EnumCol in Postgres.

* MySQLConnection now recognizes Enum, Double and Time columns when drawing the
  database scheme from DB.

* Minor fix in FirebirdConnection.fromDatabase.

* Fixed a bug with default field values for columns for Firebird connection.

* Prevent a deadlock in declarative.threadSafeMethod() by not reacquiring
  the class lock.

* Fixed a bug in col.createSQL().

* Fixed a bug in converting date/time for years < 1000 (time.strptime()
  requires exactly 4 digits for %Y, hence a year < 1000 must be 0-padded).

Other Changes
-------------
